Fix histogram tooltip z-index issues
Closes #11950

--- a/ui/src/shared/components/HistogramTooltip.scss
+++ b/ui/src/shared/components/HistogramTooltip.scss
@@ -9,6 +9,8 @@
   padding: 10px;
   color: $g14-chromium;
   z-index: $z--dygraph-legend;
+  position: fixed;
+  display: none;
 }
 
 .histogram-tooltip--bin {
